resolve horizontal scrollbar

--- a/src/pages/Gathertown/Gathertown.scss
+++ b/src/pages/Gathertown/Gathertown.scss
@@ -1,6 +1,12 @@
 @import '../../styles/colorpalette.scss';
 @import '../../styles/responsive.scss';
 
+html,
+body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 .gathertown-container {
   background-image: url('https://wisjul21.sgp1.cdn.digitaloceanspaces.com/assets/images/background/main.jpg');
   background-size: cover;
